--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
     "name": "web-monitor-sdk",
-    "private": true,
-    "version": "0.0.0",
+    "version": "1.0.0",
+    "description": "Web 前端监控 SDK",
     "type": "module",
-    "files": [
-        "dist",
-        "index.d.ts"
-    ],
-    "main": "./dist/counter.umd.cjs",
-    "module": "./dist/counter.js",
-    "types": "./index.d.ts",
-    "exports": {
-        "types": "./index.d.ts",
-        "import": "./dist/counter.js",
-        "require": "./dist/counter.umd.cjs"
-    },
+    "main": "src/index.ts",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "format": "npx prettier . --write"
+        "format": "npx prettier . --write",
+        "build": "rollup -c",
+        "watch": "rollup -c -w"
     },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
     "devDependencies": {
-        "prettier": "3.4.2",
-        "typescript": "~5.7.2",
-        "vite": "^6.0.1"
+        "@rollup/plugin-commonjs": "^28.0.1",
+        "@rollup/plugin-node-resolve": "^15.3.0",
+        "@rollup/plugin-terser": "^0.4.4",
+        "@rollup/plugin-typescript": "^12.1.1",
+        "prettier": "^3.4.2",
+        "rollup": "^4.28.1",
+        "rollup-plugin-livereload": "^2.0.5",
+        "tslib": "^2.8.1",
+        "typescript": "^5.7.2"
+    },
+    "dependencies": {
+        "web-vitals": "^4.2.4"
     }
 }
