--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,18 @@
         "target": "ES2020",
         "useDefineForClassFields": true,
         "module": "ESNext",
-        "lib": ["ES2020", "DOM", "DOM.Iterable"],
+        "lib": [
+            "ES2020",
+            "DOM",
+            "DOM.Iterable"
+        ],
         "skipLibCheck": true,
-
         /* Bundler mode */
         "moduleResolution": "bundler",
-        "allowImportingTsExtensions": true,
+        //        "allowImportingTsExtensions": true,
         "isolatedModules": true,
         "moduleDetection": "force",
         "noEmit": true,
-
         /* Linting */
         "strict": true,
         "noUnusedLocals": true,
@@ -21,6 +23,6 @@
         "noUncheckedSideEffectImports": true
     },
     "include": [
-        "lib"
+        "src/*.ts"
     ]
 }
